cmake 3.12 fail to generate csproj project with linked c++ library
In CMAKE 3.12.0 this CMakeLists.txt fail to generate a csproj project file for project 'ShouldBeCSharpProject'. In CMAKE 3.11.4, the project 'ShouldBeCSharpProject' is a csproj. Adding the 'Example' as a subdirectory creates a csproj in build.
Removing the last line ('target_link_libraries (ShouldBeCSharpProject PUBLIC cpp_submodule)'), and the project is generated correctly. CMakeLists.txt
fully minimal working example: cmake_312_csharp_bug.7z